--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,12 +8,12 @@
     "description": "Smart Community Health Monitoring and Early Warning System.",
     "icons": [
         {
-            "src": "https://placehold.co/192x192/007bff/FFFFFF?text=💧",
+            "src": "/static/icons/icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "https://placehold.co/512x512/007bff/FFFFFF?text=💧",
+            "src": "/static/icons/icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
